apps/base/homepage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.10.9
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          volumeMounts:
            - name: homepage-config
              mountPath: /app/config/custom.js
              subPath: custom.js
            - name: homepage-config
              mountPath: /app/config/custom.css
              subPath: custom.css
            - name: homepage-config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: homepage-config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: homepage-config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: homepage-config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: homepage-config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: homepage-config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
            - name: logs
              mountPath: /app/config/logs
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir: {}
