apps/base/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: homepage
      port: 3000
