apps/base/homepage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.${domain}.${tld}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: homepage
          port: 3000
